Updated complied stylesheet. Changes on fix link overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,6 +65,9 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #0085A1; }
 
+.post-content {
+  word-wrap: break-word; }
+
 blockquote {
   font-style: italic; }
 
